Added play button icon and styled the play button and highscore button

--- a/index.html
+++ b/index.html
@@ -19,14 +19,11 @@
     <title>Arsenal F.C. Quiz</title>
 </head>
 <body>
-    <header>
-        <h1>Arsenal F.C. Quiz</h1>
-    </header>
-    
-    <div class="container">
+    <h1>Arsenal F.C. Quiz</h1>
+      <div class="container">
         <div id="home" class="flex-column flex-center">
-            <h3>Are you Ready?</h3>
-            <a href="/game.html" class="btn">Play</a>
+            <h3>Lets test your knowledge!</h3>
+            <a href="/game.html" class="btn">Play<i class="fas fa-play"></i></a>
             <a href="/highscore.html" id="highscore-btn" class="btn">High Scores 
                 <i class="fas fa-crown"></i></a>
         </div>
