Added border to header in html and styled in css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <title>Arsenal F.C. Quiz</title>
 </head>
 <body>
+    <header id="heading">
     <h1>Arsenal F.C. Quiz</h1>
+    </header>
       <div class="container">
         <div id="home" class="flex-column flex-center">
             <h3>Lets test your knowledge!</h3>
