--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 <body>
     <header id="heading">
     <h1>Arsenal F.C. Quiz</h1>
-    </header>
+ </header>
       <div class="container">
         <div id="home" class="flex-column flex-center">
             <h3>Lets test your knowledge!</h3>
             <label for="username">Enter a Username</label>
-            <input type="text" id="username" name ="UserName" required minlength="4" maxlength="8" placeholder="Enter Username">
+            <input type="text" id="username" name ="UserName" minlength="4" maxlength="8" placeholder="Enter Username" required>
             <input type="submit" value="Submit">
         </label>
                 <div class="btn">Play<i class="fas fa-play"></i></div>
@@ -36,7 +36,7 @@
     </div>
 
     <div id="quiz-container">
-        <h1>Quiz aPP</h1>
+        <h1>Quiz app</h1>
     </div>
 
     <div id="high-score-container">
@@ -44,8 +44,15 @@
     </div>
 
     <footer>
-        <ul class="footer-icon">
-            <li> <a href="https://www.linkedin.com/" target="_blank" rel="noopener" aria-label="Visit linkedin. (opens a new tab)" <i class="fab fa-linkedin"></i></a></li>
+        <ul class="footer-icons">
+            <li>
+                <a href="https://www.linkedin.com/" target="_blank" rel="noopener" aria-label="Visit linkedin. (opens a new tab)">
+                <i class="fab fa-linkedin"></i></a>
+            </li>
+            <li>
+                <a href="https://github.com/" target="_blank" rel="noopener" aria-label="Visit github. (opens a new tab)">
+                <i class="fab fa-github-square"></i></a>
+            </li>
         </ul>
     </footer>
     
