--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             <input type="text" id="username" name ="UserName" minlength="4" maxlength="8" placeholder="Enter Username" required>
             <input type="submit" value="Submit">
         </label>
-                <div class="btn">Play<i class="fas fa-play"></i></div>
-                    <div id="highscore-btn" class="btn">High Scores 
-                        <i class="fas fa-crown"></i></div>
+                <a href="/game.html" class="btn">Play<i class="fas fa-play"></i></a>
+                    <a href="/highscores-btn" class="btn">High Scores 
+                        <i class="fas fa-crown"></i></a>
         </div>
     </div>
-
+    
     <div id="quiz-container">
         <h1>Quiz app</h1>
     </div>
