--- a/game.html
+++ b/game.html
@@ -29,7 +29,7 @@
                     </h1>
                 </div>
             </div>
-            <div id="question">What is the answer to this question</div>
+            <h1 id="question">What is the answer to this question</h1>
             <div class="choice-container">
                 <p class="choice-prefix">A</p>
                 <p class="choice-text" data-number="1">Choice</p>
@@ -48,7 +48,6 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/javaScript.js"></script>
 
     <footer>
         <ul class="footer-icons">
@@ -62,6 +61,6 @@
             </li>
         </ul>
     </footer>
-    
+    <script src="assets/js/javaScript.js"></script>
 </body>
 </html>
