--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
     <title>Quiz Page</title>
 </head>
 <body>
-    <div class="container">
+    <div class="game-container">
         <div id="game" class="justify-center flex-column">
             <div id="hud">
                 <div class="hud-items">
@@ -29,7 +29,7 @@
                     </h1>
                 </div>
             </div>
-            <h1 id="question">What is the answer to this question</h1>
+            <h1 id="question">Inset question here</h1>
             <div class="choice-container">
                 <p class="choice-prefix">A</p>
                 <p class="choice-text" data-number="1">Choice</p>
