--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <input type="text" id="username" name ="UserName" minlength="4" maxlength="8" placeholder="Enter Username" required>
             <input type="submit" value="Submit">
         </label>
-                <a href="/game.html" class="btn">Play<i class="fas fa-play"></i></a>
-                    <a href="/highscores-btn" class="btn">High Scores 
+                <a href="game.html" class="btn">Play<i class="fas fa-play"></i></a>
+                    <a href="highscores.html" id="highscore-btn" class="btn">High Scores 
                         <i class="fas fa-crown"></i></a>
         </div>
     </div>
