Created an end.js file and wrote out code for save score and highscore and fixed a bug in game.js and now the questions are appearing and the game is functional

--- a/game.html
+++ b/game.html
@@ -12,6 +12,7 @@
     <div class="game-container">
         <div id="game" class="justify-center flex-column">
             <div id="hud">
+                <a href="/index.html" class="btn home-btn"></a>
                 <div class="hud-items">
                     <p id="progressText" class="hud-prefix">
                         Question
