Fixed questions in game.js and added an imgage to my game.html

--- a/game.html
+++ b/game.html
@@ -9,10 +9,9 @@
     <title>Quiz Page</title>
 </head>
 <body>
-    <div class="game-container">
+   <div class="game-container">
         <div id="game" class="justify-center flex-column">
             <div id="hud">
-                <a href="/index.html" class="btn home-btn"></a>
                 <div class="hud-items">
                     <p id="progressText" class="hud-prefix">
                         Question
@@ -21,6 +20,7 @@
                         <div id="progressBarFull"></div>
                     </div>
                 </div>
+                <img src="/assets/images/arsenal-logo-game.png" alt="arenal f.c. logo" height="150" width="150">
                 <div class="hud-item">
                     <p class="hud-prefix">
                         Score
@@ -49,19 +49,6 @@
             </div>
         </div>
     </div>
-
-    <footer>
-        <ul class="footer-icons">
-            <li>
-                <a href="https://www.linkedin.com/" target="_blank" rel="noopener" aria-label="Visit linkedin. (opens a new tab)">
-                <i class="fab fa-linkedin"></i></a>
-            </li>
-            <li>
-                <a href="https://github.com/" target="_blank" rel="noopener" aria-label="Visit github. (opens a new tab)">
-                <i class="fab fa-github-square"></i></a>
-            </li>
-        </ul>
-    </footer>
     <script src="assets/js/game.js"></script>
 </body>
 </html>
