Added a trophy icon to the highscores page and an image to the index.html page

--- a/highscores.html
+++ b/highscores.html
@@ -17,11 +17,25 @@
     </header>
     <div class="container">
         <div id="highScorse" class="flex-center flex-column">
+            <img src="/assets/images/black-trophy-icon.png" alt="picture of a trophy" width="150" height="150">
             <h1 id="finalScore">Leaderboard</h1>
             <ul id="highScoresList"></ul>
             <a href="/" class="btn">Go Home</a>
         </div>
     </div>
+    <footer>
+        <ul class="footer-icons">
+            <li>
+                <a href="https://www.linkedin.com/" target="_blank" rel="noopener" aria-label="Visit linkedin. (opens a new tab)">
+                <i class="fab fa-linkedin"></i></a>
+            </li>
+            <li>
+                <a href="https://github.com/" target="_blank" rel="noopener" aria-label="Visit github. (opens a new tab)">
+                <i class="fab fa-github-square"></i></a>
+            </li>
+        </ul>
+    </footer>
+
     <script src="/assets/js/highscores.js"></script>
 </body>
 </html>
