--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 </head>
 <body>
     <header id="heading">
-    <h1>Arsenal F.C. Quiz</h1>
- </header>
+    <h1>Arsenal F.C. Quiz</h1> 
+</header>
       <div class="container">
         <div id="home" class="flex-column flex-center">
+            <img src="/assets/images/arsenal-logo-game.png" alt="arenal f.c. logo" height="150" width="150">
             <h3>Lets test your knowledge!</h3>
                 <a href="game.html" class="btn">Play<i class="fas fa-play"></i></a>
                     <a href="highscores.html" id="highscore-btn" class="btn">High Scores 
