--- a/highscores.html
+++ b/highscores.html
@@ -7,6 +7,7 @@
     <title>High Scores</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/highscores.css">
+    
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" 
     crossorigin="anonymous">
@@ -20,7 +21,7 @@
             <img src="/assets/images/black-trophy-icon.png" alt="picture of a trophy" width="150" height="150">
             <h1 id="finalScore">Leaderboard</h1>
             <ul id="highScoresList"></ul>
-            <a href="/" class="btn">Go Home</a>
+            <a href="/" class="btn">Go Home <i class="fas fa-home"></i></a>
         </div>
     </div>
     <footer>
