Added a home button to the image on game.html changed the padding on container in style.css

--- a/game.html
+++ b/game.html
@@ -20,7 +20,9 @@
                         <div id="progressBarFull"></div>
                     </div>
                 </div>
-                <img src="/assets/images/arsenal-logo-game.png" alt="arenal f.c. logo" height="150" width="150">
+                <a href="/">
+                <img src="/assets/images/arsenal-logo-game.png" alt="arenal f.c. logo"
+                 height="150" width="150"></a>
                 <div class="hud-item">
                     <p class="hud-prefix">
                         Score
