--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 </header>
       <div class="container">
         <div id="home" class="flex-column flex-center">
-            <img src="/assets/images/arsenal-logo-game.png" alt="arenal f.c. logo" height="150" width="150">
+            <img src="/assets/images/arsenal-logo-game.png" alt="arenal f.c. logo" 
+            height="150" width="150">
             <h3>Lets test your knowledge!</h3>
                 <a href="game.html" class="btn">Play<i class="fas fa-play"></i></a>
                     <a href="highscores.html" id="highscore-btn" class="btn">High Scores 
