--- a/game.html
+++ b/game.html
@@ -9,6 +9,10 @@
     <title>Quiz Page</title>
 </head>
 <body>
+    <header id="heading">
+        <h1>Arsenal F.C. Quiz</h1> 
+        <a href="/" id="click" class="btn">Home</a>
+    </header>
    <div class="game-container">
         <div id="game" class="justify-center flex-column">
             <div id="hud">
@@ -20,9 +24,6 @@
                         <div id="progressBarFull"></div>
                     </div>
                 </div>
-                <a href="/">
-                <img src="/assets/images/arsenal-logo-game.png" alt="arenal f.c. logo"
-                 height="150" width="150"></a>
                 <div class="hud-item">
                     <p class="hud-prefix">
                         Score
