Images were not loading when site was deployed so i fixed this error

--- a/game.html
+++ b/game.html
@@ -11,7 +11,7 @@
 <body>
     <header id="heading">
         <h1>Arsenal F.C. Quiz</h1> 
-        <a href="/" id="click" class="btn">Home</a>
+        <a href="index.html" id="click" class="btn">Home</a>
     </header>
    <div class="game-container">
         <div id="game" class="justify-center flex-column">
