--- a/highscores.html
+++ b/highscores.html
@@ -18,10 +18,10 @@
     </header>
     <div class="container">
         <div id="highScorse" class="flex-center flex-column">
-            <img src="/assets/images/black-trophy-icon.png" alt="picture of a trophy" width="150" height="150">
+            <img src="assets/images/black-trophy-icon.png" alt="picture of a trophy" width="150" height="150">
             <h1 id="finalScore">Leaderboard</h1>
             <ul id="highScoresList"></ul>
-            <a href="/" class="btn">Go Home <i class="fas fa-home"></i></a>
+            <a href="index.html" class="btn">Go Home <i class="fas fa-home"></i></a>
         </div>
     </div>
     <footer>
@@ -37,6 +37,6 @@
         </ul>
     </footer>
 
-<script src="/assets/js/highscores.js"></script>
+<script src="assets/js/highscores.js"></script>
 </body>
 </html>
