--- a/end.html
+++ b/end.html
@@ -21,10 +21,10 @@
             <button class="btn" id="saveScoreBtn" type="submit" 
                 onclick="saveHighScore(event)">Save</button>
             </form>
-            <a href="/game.html" class="btn">Play Again</a>
-            <a href="/index.html" class="btn">Go Home</a>
+            <a href="game.html" class="btn">Play Again</a>
+            <a href="index.html" class="btn">Go Home</a>
         </div>
     </div>
-    <script src="/assets/js/end.js"></script>
+    <script src="assets/js/end.js"></script>
 </body>
 </html>
